--- a/index.html
+++ b/index.html
@@ -7,60 +7,68 @@
 
   <body>
     <h1>Six Degrees</h1>
-    
+
     <div class="board">
 
-      <div class="actor one">
-        <div class="img"></div>
-        <div class="name"></div>
+      <div class="row">
+        <div class="actor">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="movie">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="actor">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="movie">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="actor">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="movie">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
       </div>
-      <div class="movie two">
-        <div class="img"></div>
-        <div class="name"></div>
+
+      <div class="row middle">
+        <div class="actor">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
       </div>
-      <div class="actor three">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="movie four">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="actor five">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="movie six">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="actor seven">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="movie eight">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="actor nine">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="movie ten">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="actor eleven">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="movie twelve">
-        <div class="img"></div>
-        <div class="name"></div>
-      </div>
-      <div class="oscar">
-        <div class="img"></div>
-        <div class="name"></div>
+
+      <div class="row">
+        <div class="oscar">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="movie">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="actor">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="movie">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="actor">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
+        <div class="movie">
+          <div class="img"></div>
+          <div class="name"></div>
+        </div>
       </div>
 
     </div>
