added input fields, able to generate random actors and display their info

--- a/index.html
+++ b/index.html
@@ -11,67 +11,76 @@
     <div class="board">
 
       <div class="row">
-        <div class="actor">
+        <div id="start" class="actor">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="movie">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text"></input>
         </div>
         <div class="actor">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text"></input>
         </div>
         <div class="movie">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="actor">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="movie">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
       </div>
 
-      <div class="row middle">
-        <div class="actor">
+      <div class="row middle-row">
+        <div class="goal">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
+        </div>
+        <div class="actor middle-actor">
+          <div class="img"></div>
+          <input type="text" disabled></input>
         </div>
       </div>
 
       <div class="row">
         <div class="oscar">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="movie">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="actor">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="movie">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="actor">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
         <div class="movie">
           <div class="img"></div>
-          <div class="name"></div>
+          <input type="text" disabled></input>
         </div>
       </div>
 
     </div>
 
+  <script src="lib/jquery-2.1.3.min.js"></script>
+  <script src="app.js"></script>
+  <script>
+    app.init();
+  </script>
   </body>
 </html>
