improved compare function, refactored start/goal actors and info storage

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
           <div class="img"></div>
           <input type="text" disabled></input>
         </div>
-        <div class="movie">
+        <div class="movie compare-movie">
           <div class="img"></div>
           <input type="text"></input>
         </div>
-        <div class="actor">
+        <div class="actor compare-actor">
           <div class="img"></div>
           <input type="text"></input>
         </div>
