refactored view, first comparison works

--- a/index.html
+++ b/index.html
@@ -10,69 +10,65 @@
 
     <div class="board">
 
-      <div class="row">
-        <div id="start" class="actor">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="movie compare-movie">
-          <div class="img"></div>
-          <input type="text"></input>
-        </div>
-        <div class="actor compare-actor">
-          <div class="img"></div>
-          <input type="text"></input>
-        </div>
-        <div class="movie">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="actor">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="movie">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
+      <div id="start" class="actor">
+        <div class="img"></div>
+        <input type="text" disabled></input>
       </div>
-
-      <div class="row middle-row">
-        <div class="goal">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="actor middle-actor">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
+      <div class="movie compare-movie">
+        <div class="img"></div>
+        <input type="text"></input>
       </div>
+      <div class="actor compare-actor">
+        <div class="img"></div>
+        <input type="text"></input>
+      </div>
+      <div class="movie">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="actor">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="movie">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="actor">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="movie">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="actor">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="movie">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="actor">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="movie">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <!--
+      <div class="oscar">
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+    -->
 
-      <div class="row">
-        <div class="oscar">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="movie">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="actor">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="movie">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="actor">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
-        <div class="movie">
-          <div class="img"></div>
-          <input type="text" disabled></input>
-        </div>
+      <div class="goal">
+        <h2>GOAL:</h2>
+        <div class="img"></div>
+        <input type="text" disabled></input>
       </div>
 
     </div>
