only six connections allowed now

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <body>
     <h1>Six Degrees</h1>
 
+    <div class="message-board">
+      <div class="goal">
+        <h2>GOAL:</h2>
+        <div class="img"></div>
+        <input type="text" disabled></input>
+      </div>
+      <div class="connections-left">
+        <h2>Connections Left: <span>6</span></h2>
+      </div>
+    </div>
+
     <div class="board">
 
       <div id="start" class="actor">
@@ -22,54 +33,13 @@
         <div class="img"></div>
         <input type="text"></input>
       </div>
-      <div class="movie">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="actor">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="movie">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="actor">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="movie">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="actor">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="movie">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="actor">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-      <div class="movie">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
+
       <!--
       <div class="oscar">
         <div class="img"></div>
         <input type="text" disabled></input>
       </div>
     -->
-
-      <div class="goal">
-        <h2>GOAL:</h2>
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
 
     </div>
 
