--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
       <div class="connections-left">
         <h2>Connections Left: <span>6</span></h2>
+        <h2 class="error"></h2>
       </div>
     </div>
 
