add background image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Six Degrees</title>
+    <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/styles.css" >
   </head>
 
@@ -22,6 +23,10 @@
 
     <div class="board">
 
+      <div class="oscar hidden">
+        <h2>Congrats!</h2>
+      </div>
+
       <div id="start" class="actor">
         <div class="img"></div>
         <input type="text" disabled></input>
@@ -35,12 +40,6 @@
         <input type="text"></input>
       </div>
 
-      <!--
-      <div class="oscar">
-        <div class="img"></div>
-        <input type="text" disabled></input>
-      </div>
-    -->
 
     </div>
 
